--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "porfolio",
+  "name": "portifolio-lorrys",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,11 +11,12 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/mdx": "^2.0.13",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
